FireAlarmApplication.Web/mtg_debug_20260127_162830.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:28:30
NetCDF: C:\Users\kubil\AppData\Local\Temp\755afa1d-7ad4-4d08-bc33-7f7c19cea154.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
